# fewword

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
contracts/: README.md  browser_agent.yml  code_agents.yml  customer_service.yml  data_pipeline.yml  devops.yml  edit_safety.yml  financial.yml  generic.yml  healthcare.yml  legal.yml  rag.yml  sales.yml  support.yml
contracts/examples/: banned_tools.yml  prior_work.yml  schemas.yml
docs/: adapters.md  cli.md  contracts.md  prove-it.md
examples/incidents/: pocketos_drop_database.fewwords.yml  pocketos_drop_database.trace.json
examples/quickstart/: simple_agent.trace.json  simple_agent.trajeval.yml
src/fewwords/: __init__.py
src/trajeval/: __init__.py  action.py  attestation.py  cli.py  discover.py  drift.py  guard.py  initializer.py  preflight.py  scenario.py
src/trajeval/adapters/: __init__.py  auto.py  base.py  langgraph.py  litellm.py  openai.py  otel.py
src/trajeval/analysis/: auto_contract.py  cascade.py  consistency.py  contract_suggest.py  fault_injection.py  graph.py  intent.py  ltl.py  ltl_compiler.py  metrics.py  self_eval.py  workflow.py
src/trajeval/assertions/: core.py  pytest_plugin.py
src/trajeval/contract/: __init__.py  state.py
src/trajeval/sdk/: __init__.py  callback.py  client.py  evaluate.py  exceptions.py  failure_context.py  models.py  otel.py  trace_context.py
tests/unit/: test_action.py  test_assertions.py  test_attestation.py  test_auto_contract.py  test_auto_detect.py
